--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
     <header>
         <nav>
-            <a href="./index.html/logo.jpg">WebStudio</a>
+            <a href="./index.html"> 
+                WebStudio
+            </a>
             <ul>
                 <li><a href="">Studio</a></li>
                 <li><a href="">Portfolio</a></li>
@@ -22,7 +24,7 @@
                         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
                     </li>
                     <li>
-                        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+                        <a href="tel:+110001111111">+11(000)111-11-11</a>
                     </li>
                 </ul>
             </address>
@@ -76,7 +78,7 @@
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/img4.jpg" alt="img" width="264">
+                    <img src="./images/img4.png" alt="img" width="264">
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
@@ -84,7 +86,9 @@
         </section>
     </main>
     <footer>
-        <a href="./index.html/logo.jpg">WebStudio</a>
+        <a href="./index.html"> 
+            WebStudio
+        </a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 
