--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/img4.png" alt="img" width="264">
+                    <img src="./images/img4.jpg" alt="img" width="264">
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
