--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </li>
                 <li>
                     <h3>Diligence</h3>
-                    < <p>Research and confirm brands that present the strongest digital growth opportunities and
+                     <p>Research and confirm brands that present the strongest digital growth opportunities and
                         minimize risk.</p>
                 </li>
                 <li>
@@ -92,6 +92,6 @@
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 
-    <body>
+</body>
 
 </html>
