--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Webstoudio</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>
@@ -24,7 +25,7 @@
                         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
                     </li>
                     <li>
-                        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+                        <a href="tel:+110001111111">+11(000)111-11-11</a>
                     </li>
                 </ul>
             </address>
@@ -49,7 +50,7 @@
                 </li>
                 <li>
                     <h3>Diligence</h3>
-                     <p>Research and confirm brands that present the strongest digital growth opportunities and
+                    < <p>Research and confirm brands that present the strongest digital growth opportunities and
                         minimize risk.</p>
                 </li>
                 <li>
@@ -78,7 +79,7 @@
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/img4.jpg" alt="img" width="264">
+                    <img src="./images/img4." alt="img" width="264">
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
@@ -92,6 +93,6 @@
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 
-</body>
+    <body>
 
 </html>
