--- a/index.html
+++ b/index.html
@@ -5,88 +5,139 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Webstoudio</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&family=Roboto:wght@400;500;700&display=swap"
+        rel="stylesheet">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css">
+    <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <a href="./index.html"> 
-                WebStudio
+    <header class="page-header">
+        <nav class="page-navigator">
+            <a class="logotype" href="./index.html"> 
+                Web<span class="logotype-span">Studio</span>
             </a>
             <ul>
-                <li><a href="">Studio</a></li>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
+                <li class="list">
+                    <a class="menu-link" href="/index.html">Studio</a>
+                </li>
+                <li class="list">
+                    <a class="menu-link" href="">Portfolio</a>
+                </li>
+                <li class="list">
+                    <a class="menu-link" href="k">Contacts</a>
+                </li>
             </ul>
             </nav>
-            <address>
-                <ul>
-                    <li>
+            <address class="address">
+                <ul class="menu-contact">
+                    <li class="contact-list">
                         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
                     </li>
-                    <li>
+                    <li class="contact-list">
                         <a href="tel:+110001111111">+11(000)111-11-11</a>
                     </li>
                 </ul>
             </address>
     </header>
     <main>
-        <section>
-            <h1>Effective Solutions for Your Business</h1>
-            <button type="button">Order Service</button>
+
+       <!-- HERO SECTION -->
+
+        <section class="section">
+            <h1 class="page-title">Effective Solutions for Your Business</h1>
+            <button type="button" class="button">Order Service</button>
         </section>
         <section>
-            <h2>OURTEAM</h2>
+            <h2 class="subtitle">OURTEAM</h2>
             <ul>
-                <li>
-                    <h3>Strategy</h3>
-                    <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.
+                <li class="list">
+                    <h3 class="list-title">Strategy</h3>
+                    <p class="list-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.
                     </p>
                 </li>
-                <li>
-                    <h3>Punctuality</h3>
-                    <p>Bring the key message to the brand's audience for the best price within the shortest possible
+                <li class="list">
+                    <h3 class="list-title">Punctuality</h3>
+                    <p class="list-text">Bring the key message to the brand's audience for the best price within the shortest possible
                         time.</p>
                 </li>
-                <li>
-                    <h3>Diligence</h3>
-                    < <p>Research and confirm brands that present the strongest digital growth opportunities and
+                <li class="list">
+                    <h3 class="list-title">Diligence</h3>
+                     <p class="list-text">Research and confirm brands that present the strongest digital growth opportunities and
                         minimize risk.</p>
-                </li>
+                </li class="list">
                 <li>
-                    <h3>Technologies</h3>
-                    <p>Design practice focused on digital experiences. We bring forth a deep passion for
+                    <h3 class="list-title">Technologies</h3>
+                    <p class class="list-text">Design practice focused on digital experiences. We bring forth a deep passion for
                         problem-solving.</p>
+                </li class="list">
+            </ul>
+        </section>
+        <section>
+            <h2 class="subtitle">Our Team</h2>
+            <ul>
+                <li class="list">
+                    <img src="./images/img1.jpg" alt="img" width="264">
+                    <h3 class="list-title">Mark Guerrero</h3>
+                    <p class="list-text">Product Designer</p>
+                </li>
+                <li class="list">
+                    <img src="./images/img2.jpg" alt="img" width="264">
+                    <h3 class="list-title">Tom Ford</h3>
+                    <p class="list-text">Frontend Developer</p>
+                </li>
+                <li class="list">
+                    <img src="./images/img3.jpg" alt="img" width="264">
+                    <h3 class="list-title">Camila Garcia</h3>
+                    <p class="list-text">Marketing</p>
+                </li>
+                <li class="list">
+                    <img src="./images/img4." alt="img" width="264">
+                    <h3 class="list-title">Daniel Wilson</h3>
+                    <p class="list-text">UI Designer</p>
                 </li>
             </ul>
         </section>
         <section>
-            <h2>Our Team</h2>
-            <ul>
-                <li>
-                    <img src="./images/img1.jpg" alt="img" width="264">
-                    <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
-                </li>
-                <li>
-                    <img src="./images/img2.jpg" alt="img" width="264">
-                    <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>
-                </li>
-                <li>
-                    <img src="./images/img3.jpg" alt="img" width="264">
-                    <h3>Camila Garcia</h3>
-                    <p>Marketing</p>
-                </li>
-                <li>
-                    <img src="./images/img4." alt="img" width="264">
-                    <h3>Daniel Wilson</h3>
-                    <p>UI Designer</p>
-                </li>
-            </ul>
+         <h2 class="subtitle">Our Portfolio</h2>
+           <ul>
+            <li class="list">
+                <img src="./images/img5.jpg" alt="img" width="264">
+                <h3 class="list-title">Banking App</h3>
+                <p class="list-text">App</p>
+            </li>
+            <li class="list">
+                <img src="./images/img6.jpg" alt="img" width="264">
+                <h3 class="list-title">Cashless Payment</h3>
+                <p class="list-text">Marketing</p>
+            </li>
+            <li>
+                <img src="./images/img7.jpg" alt="img" width="264">
+                <h3 class="list-title">Meditatiion App</h3>
+                <p class="list-text">App</p>
+            </li>
+            <li>
+                <img src="./images/img8.jpg" alt="img" width="264">
+                <h3 class="list-title">Taxi Service</h3>
+                <p class="list-text">Marketing</p>
+            </li>
+            <li>
+                <img src="./images/img9.jpg" alt="img" width="264">
+                <h3 class="list-title">Screen Illustrations</h3>
+                <p class="list-text">Design</p>
+            </li>
+            <li>
+                <img src="./images/img10.jpg" alt="img" width="264">
+                <h3 class="list-title">Online Courses</h3>
+                <p class="list-text">Marketing</p>
+            </li>
+           </ul>
         </section>
     </main>
-    <footer>
+    <footer class="page-footer">
         <a href="./index.html"> 
             WebStudio
         </a>
