--- a/index.html
+++ b/index.html
@@ -6,15 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Webstoudio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
-        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&family=Roboto:wght@400;500;700&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto:wght@400;500;700&display=swap"
         rel="stylesheet">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css">
-    <link rel="stylesheet" type="text/css" href="./style.css">
+    <link rel="stylesheet" type="text/css" href="./css/styles.css">
 </head>
-<body>
+<body>#]
+
+    
     <header class="page-header">
         <nav class="page-navigator">
             <a class="logotype" href="./index.html"> 
@@ -35,10 +37,10 @@
             <address class="address">
                 <ul class="menu-contact">
                     <li class="contact-list">
-                        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        <a class="contact-information" href="mailto:info@devstudio.com">info@devstudio.com</a>
                     </li>
                     <li class="contact-list">
-                        <a href="tel:+110001111111">+11(000)111-11-11</a>
+                        <a class="contact-information" href="tel:+110001111111">+11(000)111-11-11</a>
                     </li>
                 </ul>
             </address>
@@ -51,10 +53,12 @@
             <h1 class="page-title">Effective Solutions for Your Business</h1>
             <button type="button" class="button">Order Service</button>
         </section>
-        <section>
+        <section class="section">
             <h2 class="subtitle">OURTEAM</h2>
             <ul>
                 <li class="list">
+
+
                     <h3 class="list-title">Strategy</h3>
                     <p class="list-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.
                     </p>
@@ -76,7 +80,7 @@
                 </li class="list">
             </ul>
         </section>
-        <section>
+        <section class="section">
             <h2 class="subtitle">Our Team</h2>
             <ul>
                 <li class="list">
@@ -101,7 +105,7 @@
                 </li>
             </ul>
         </section>
-        <section>
+        <section class="section">
          <h2 class="subtitle">Our Portfolio</h2>
            <ul>
             <li class="list">
@@ -138,10 +142,10 @@
         </section>
     </main>
     <footer class="page-footer">
-        <a href="./index.html"> 
-            WebStudio
+        <a class="logotype"  href="./index.html"> 
+            Web<span class="logotype-span">Studio</span>
         </a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <p class="logotype-text" style="color: #F4F4FD;">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 
     <body>
