--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>#]
 
-    
+
     <header class="page-header">
         <nav class="page-navigator">
             <a class="logotype" href="./index.html"> 
@@ -30,7 +30,7 @@
                     <a class="menu-link" href="">Portfolio</a>
                 </li>
                 <li class="list">
-                    <a class="menu-link" href="k">Contacts</a>
+                    <a class="menu-link" href="">Contacts</a>
                 </li>
             </ul>
             </nav>
@@ -75,7 +75,7 @@
                 </li class="list">
                 <li>
                     <h3 class="list-title">Technologies</h3>
-                    <p class class="list-text">Design practice focused on digital experiences. We bring forth a deep passion for
+                    <p class="list-text">Design practice focused on digital experiences. We bring forth a deep passion for
                         problem-solving.</p>
                 </li class="list">
             </ul>
