--- a/index.html
+++ b/index.html
@@ -57,8 +57,6 @@
             <h2 class="subtitle">OURTEAM</h2>
             <ul>
                 <li class="list">
-
-
                     <h3 class="list-title">Strategy</h3>
                     <p class="list-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.
                     </p>
@@ -80,26 +78,26 @@
                 </li class="list">
             </ul>
         </section>
-        <section class="section">
+        <section class="section-3">
             <h2 class="subtitle">Our Team</h2>
             <ul>
                 <li class="list">
-                    <img src="./images/img1.jpg" alt="img" width="264">
+                    <img src="./images/img1.jpg" alt="img" width="264" class="img">
                     <h3 class="list-title">Mark Guerrero</h3>
                     <p class="list-text">Product Designer</p>
                 </li>
                 <li class="list">
-                    <img src="./images/img2.jpg" alt="img" width="264">
+                    <img src="./images/img2.jpg" alt="img" width="264" class="img">
                     <h3 class="list-title">Tom Ford</h3>
                     <p class="list-text">Frontend Developer</p>
                 </li>
                 <li class="list">
-                    <img src="./images/img3.jpg" alt="img" width="264">
+                    <img src="./images/img3.jpg" alt="img" width="264" class="img">
                     <h3 class="list-title">Camila Garcia</h3>
                     <p class="list-text">Marketing</p>
                 </li>
                 <li class="list">
-                    <img src="./images/img4." alt="img" width="264">
+                    <img src="./images/img4." alt="img" width="264" class="img">
                     <h3 class="list-title">Daniel Wilson</h3>
                     <p class="list-text">UI Designer</p>
                 </li>
@@ -109,32 +107,32 @@
          <h2 class="subtitle">Our Portfolio</h2>
            <ul>
             <li class="list">
-                <img src="./images/img5.jpg" alt="img" width="264">
+                <img src="./images/img5.jpg" alt="img" width="264" class="img">
                 <h3 class="list-title">Banking App</h3>
                 <p class="list-text">App</p>
             </li>
             <li class="list">
-                <img src="./images/img6.jpg" alt="img" width="264">
+                <img src="./images/img6.jpg" alt="img" width="264" class="img">
                 <h3 class="list-title">Cashless Payment</h3>
                 <p class="list-text">Marketing</p>
             </li>
             <li>
-                <img src="./images/img7.jpg" alt="img" width="264">
-                <h3 class="list-title">Meditatiion App</h3>
+                <img src="./images/img7.jpg" alt="img" width="264" class="img">
+                <h3 class="list-title">Meditation App</h3>
                 <p class="list-text">App</p>
             </li>
             <li>
-                <img src="./images/img8.jpg" alt="img" width="264">
+                <img src="./images/img8.jpg" alt="img" width="264" class="img">
                 <h3 class="list-title">Taxi Service</h3>
                 <p class="list-text">Marketing</p>
             </li>
             <li>
-                <img src="./images/img9.jpg" alt="img" width="264">
+                <img src="./images/img9.jpg" alt="img" width="264" class="img">
                 <h3 class="list-title">Screen Illustrations</h3>
                 <p class="list-text">Design</p>
             </li>
             <li>
-                <img src="./images/img10.jpg" alt="img" width="264">
+                <img src="./images/img10.jpg" alt="img" width="264" class="img">
                 <h3 class="list-title">Online Courses</h3>
                 <p class="list-text">Marketing</p>
             </li>
