--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     <p class="list-text">Marketing</p>
                 </li>
                 <li class="list">
-                    <img src="./images/img4." alt="img" width="264" class="img">
+                    <img src="./images/img4.jpg" alt="img" width="264" class="img">
                     <h3 class="list-title">Daniel Wilson</h3>
                     <p class="list-text">UI Designer</p>
                 </li>
