--- a/index.html
+++ b/index.html
@@ -7,16 +7,12 @@
     <title>Webstoudio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto:wght@400;500;700&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css">
     <link rel="stylesheet" type="text/css" href="./css/styles.css">
 </head>
-<body>#]
-
-
+<body>
     <header class="page-header">
         <nav class="page-navigator">
             <a class="logotype" href="./index.html"> 
