--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     </main>
     <footer class="page-footer">
         <a class="logotype"  href="./index.html"> 
-            Web<span class="logotype-span">Studio</span>
+            Web<span class="footer-logotype-span">Studio</span>
         </a>
         <p class="logotype-text" style="color: #F4F4FD;">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
