--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </a>
             <ul>
                 <li class="list">
-                    <a class="menu-link" href="/index.html">Studio</a>
+                    <a class="menu-link" href="./index.html">Studio</a>
                 </li>
                 <li class="list">
                     <a class="menu-link" href="">Portfolio</a>
