--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 </li class="list">
             </ul>
         </section>
-        <section class="section-3">
+        <section class="third-section">
             <h2 class="subtitle">Our Team</h2>
             <ul>
                 <li class="list">
