--- a/index.html
+++ b/index.html
@@ -7,15 +7,18 @@
     <title>Webstoudio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto:wght@400;500;700&display=swap"
+        rel="stylesheet">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
+
 <body>
     <header class="page-header">
         <nav class="page-navigator">
-            <a class="logotype" href="./index.html"> 
+            <a class="logotype" href="./index.html">
                 Web<span class="logotype-span">Studio</span>
             </a>
             <ul>
@@ -29,21 +32,21 @@
                     <a class="menu-link" href="">Contacts</a>
                 </li>
             </ul>
-            </nav>
-            <address class="address">
-                <ul class="menu-contact">
-                    <li class="contact-list">
-                        <a class="contact-information" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                    </li>
-                    <li class="contact-list">
-                        <a class="contact-information" href="tel:+110001111111">+11(000)111-11-11</a>
-                    </li>
-                </ul>
-            </address>
+        </nav>
+        <address class="address">
+            <ul class="menu-contact">
+                <li class="contact-list">
+                    <a class="contact-information" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li class="contact-list">
+                    <a class="contact-information" href="tel:+110001111111">+11(000)111-11-11</a>
+                </li>
+            </ul>
+        </address>
     </header>
     <main>
 
-       <!-- HERO SECTION -->
+        <!-- HERO SECTION -->
 
         <section class="section">
             <h1 class="page-title">Effective Solutions for Your Business</h1>
@@ -54,22 +57,26 @@
             <ul>
                 <li class="list">
                     <h3 class="list-title">Strategy</h3>
-                    <p class="list-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.
+                    <p class="list-text">Our goal is to identify the business problem to walk away with the perfect and
+                        creative solution.
                     </p>
                 </li>
                 <li class="list">
                     <h3 class="list-title">Punctuality</h3>
-                    <p class="list-text">Bring the key message to the brand's audience for the best price within the shortest possible
+                    <p class="list-text">Bring the key message to the brand's audience for the best price within the
+                        shortest possible
                         time.</p>
                 </li>
                 <li class="list">
                     <h3 class="list-title">Diligence</h3>
-                     <p class="list-text">Research and confirm brands that present the strongest digital growth opportunities and
+                    <p class="list-text">Research and confirm brands that present the strongest digital growth
+                        opportunities and
                         minimize risk.</p>
                 </li class="list">
                 <li>
                     <h3 class="list-title">Technologies</h3>
-                    <p class="list-text">Design practice focused on digital experiences. We bring forth a deep passion for
+                    <p class="list-text">Design practice focused on digital experiences. We bring forth a deep passion
+                        for
                         problem-solving.</p>
                 </li class="list">
             </ul>
@@ -100,46 +107,47 @@
             </ul>
         </section>
         <section class="section">
-         <h2 class="subtitle">Our Portfolio</h2>
-           <ul>
-            <li class="list">
-                <img src="./images/img5.jpg" alt="img" width="360" class="img">
-                <h3 class="list-title">Banking App</h3>
-                <p class="list-text">App</p>
-            </li>
-            <li class="list">
-                <img src="./images/img6.jpg" alt="img" width="360" class="img">
-                <h3 class="list-title">Cashless Payment</h3>
-                <p class="list-text">Marketing</p>
-            </li>
-            <li>
-                <img src="./images/img7.jpg" alt="img" width="360" class="img">
-                <h3 class="list-title">Meditation App</h3>
-                <p class="list-text">App</p>
-            </li>
-            <li>
-                <img src="./images/img8.jpg" alt="img" width="360" class="img">
-                <h3 class="list-title">Taxi Service</h3>
-                <p class="list-text">Marketing</p>
-            </li>
-            <li>
-                <img src="./images/img9.jpg" alt="img" width="360" class="img">
-                <h3 class="list-title">Screen Illustrations</h3>
-                <p class="list-text">Design</p>
-            </li>
-            <li>
-                <img src="./images/img10.jpg" alt="img" width="360" class="img">
-                <h3 class="list-title">Online Courses</h3>
-                <p class="list-text">Marketing</p>
-            </li>
-           </ul>
+            <h2 class="subtitle">Our Portfolio</h2>
+            <ul>
+                <li class="list">
+                    <img src="./images/img5.jpg" alt="img" width="360" class="img">
+                    <h3 class="list-title">Banking App</h3>
+                    <p class="list-text">App</p>
+                </li>
+                <li class="list">
+                    <img src="./images/img6.jpg" alt="img" width="360" class="img">
+                    <h3 class="list-title">Cashless Payment</h3>
+                    <p class="list-text">Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/img7.jpg" alt="img" width="360" class="img">
+                    <h3 class="list-title">Meditation App</h3>
+                    <p class="list-text">App</p>
+                </li>
+                <li>
+                    <img src="./images/img8.jpg" alt="img" width="360" class="img">
+                    <h3 class="list-title">Taxi Service</h3>
+                    <p class="list-text">Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/img9.jpg" alt="img" width="360" class="img">
+                    <h3 class="list-title">Screen Illustrations</h3>
+                    <p class="list-text">Design</p>
+                </li>
+                <li>
+                    <img src="./images/img10.jpg" alt="img" width="360" class="img">
+                    <h3 class="list-title">Online Courses</h3>
+                    <p class="list-text">Marketing</p>
+                </li>
+            </ul>
         </section>
     </main>
     <footer class="page-footer">
-        <a class="logotype"  href="./index.html"> 
+        <a class="logotype" href="./index.html">
             Web<span class="footer-logotype-span">Studio</span>
         </a>
-        <p class="logotype-text" style="color: #F4F4FD;">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <p class="logotype-text">Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.</p>
     </footer>
 
     <body>
