--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     </main>
     <footer class="page-footer">
         <a class="logotype" href="./index.html">
-            Web<span class="footer-logotype-span">Studio</span>
+            Web<span class="footer-logotype-span" style="color: #F4F4FD">Studio</span>
         </a>
         <p class="logotype-text">Increase the flow of customers and sales for your business with
             digital marketing & growth solutions.</p>
