--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <p class="list-text">Design practice focused on digital experiences. We bring forth a deep passion
                         for
                         problem-solving.</p>
-                </li class="list">
+                </li>
             </ul>
         </section>
         <section class="third-section">
@@ -150,7 +150,7 @@
             digital marketing & growth solutions.</p>
     </footer>
 
-    <body>
+</body>
 
 </html>
 
