--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 </head>
 
 <body>
-    <header class="page-header">
+    <div>
+    <header class="page-header container">
+        <div>
         <nav class="page-navigator">
             <a class="logotype" href="./index.html">
                 Web<span class="logotype-span">Studio</span>
@@ -34,6 +36,7 @@
             </ul>
         </nav>
         <address class="address">
+            <div class="conteiner">
             <ul class="menu-contact">
                 <li class="contact-list">
                     <a class="contact-information" href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -43,6 +46,7 @@
                 </li>
             </ul>
         </address>
+        </div>
     </header>
     <main>
 
@@ -72,15 +76,17 @@
                     <p class="list-text">Research and confirm brands that present the strongest digital growth
                         opportunities and
                         minimize risk.</p>
-                </li>
+                </li class="list">
                 <li>
                     <h3 class="list-title">Technologies</h3>
                     <p class="list-text">Design practice focused on digital experiences. We bring forth a deep passion
                         for
                         problem-solving.</p>
-                </li>
+                </li class="list">
             </ul>
         </section>
+        </div>
+        <div>
         <section class="third-section">
             <h2 class="subtitle">Our Team</h2>
             <ul>
@@ -106,6 +112,8 @@
                 </li>
             </ul>
         </section>
+        </div>
+        <div>
         <section class="section">
             <h2 class="subtitle">Our Portfolio</h2>
             <ul>
@@ -141,6 +149,7 @@
                 </li>
             </ul>
         </section>
+        </div>
     </main>
     <footer class="page-footer">
         <a class="logotype" href="./index.html">
@@ -149,5 +158,7 @@
         <p class="logotype-text" style="color: #F4F4FD">Increase the flow of customers and sales for your business with
             digital marketing & growth solutions.</p>
     </footer>
-  </body>
+
+    <body>
+
 </html>
