--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
 <body>
     <div>
-    <header class="page-header container">
-        <div>
+    <header class="page-header">
+        <div class="container">
         <nav class="page-navigator">
             <a class="logotype" href="./index.html">
                 Web<span class="logotype-span">Studio</span>
@@ -36,7 +36,7 @@
             </ul>
         </nav>
         <address class="address">
-            <div class="conteiner">
+            <div></div>
             <ul class="menu-contact">
                 <li class="contact-list">
                     <a class="contact-information" href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -159,6 +159,9 @@
             digital marketing & growth solutions.</p>
     </footer>
 
+    <body>
+
+</html>
     <body>
 
 </html>
