--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a class="logotype" href="./index.html">
                 Web<span class="logotype-span">Studio</span>
             </a>
-            <ul>
+            <ul class="list-container">
                 <li class="list">
                     <a class="menu-link" href="./index.html">Studio</a>
                 </li>
@@ -36,7 +36,7 @@
             </ul>
         </nav>
         <address class="address">
-            <div></div>
+            <div>
             <ul class="menu-contact">
                 <li class="contact-list">
                     <a class="contact-information" href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -45,18 +45,20 @@
                     <a class="contact-information" href="tel:+110001111111">+11(000)111-11-11</a>
                 </li>
             </ul>
+            </div>
         </address>
-        </div>
     </header>
     <main>
-
         <!-- HERO SECTION -->
 
         <section class="section">
+            <div class="container">
             <h1 class="page-title">Effective Solutions for Your Business</h1>
             <button type="button" class="button">Order Service</button>
+            </div>
         </section>
         <section class="section">
+            <div class="container">
             <h2 class="subtitle">OURTEAM</h2>
             <ul>
                 <li class="list">
@@ -84,10 +86,10 @@
                         problem-solving.</p>
                 </li class="list">
             </ul>
+            </div>
         </section>
-        </div>
-        <div>
         <section class="third-section">
+            <div class="container">
             <h2 class="subtitle">Our Team</h2>
             <ul>
                 <li class="list">
@@ -111,10 +113,10 @@
                     <p class="list-text">UI Designer</p>
                 </li>
             </ul>
+            </div>
         </section>
-        </div>
-        <div>
         <section class="section">
+            <div class="container">
             <h2 class="subtitle">Our Portfolio</h2>
             <ul>
                 <li class="list">
@@ -148,20 +150,20 @@
                     <p class="list-text">Marketing</p>
                 </li>
             </ul>
+            </div>
         </section>
         </div>
     </main>
     <footer class="page-footer">
+        <div class="container">
         <a class="logotype" href="./index.html">
             Web<span class="footer-logotype-span">Studio</span>
         </a>
         <p class="logotype-text" style="color: #F4F4FD">Increase the flow of customers and sales for your business with
             digital marketing & growth solutions.</p>
+        </div>
     </footer>
 
-    <body>
-
-</html>
     <body>
 
 </html>
