--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
     <main>
         <!-- HERO SECTION -->
 
-        <section class="section">
+        <section class="first-section">
             <div class="container">
             <h1 class="page-title">Effective Solutions for Your Business</h1>
             <button type="button" class="button">Order Service</button>
             </div>
         </section>
-        <section class="section">
+        <section class="second-section">
             <div class="container">
             <h2 class="subtitle">OURTEAM</h2>
             <ul>
