--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <button type="button" class="button">Order Service</button>
             </div>
         </section>
-        <section class="second-section">
+        <section class="section">
             <div class="container">
             <h2 class="subtitle">OURTEAM</h2>
             <ul>
