--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             </ul>
             </div>
         </section>
-        <section class="third-section">
+        <section class="section">
             <div class="container">
             <h2 class="subtitle">Our Team</h2>
             <ul>
