--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <section class="section">
             <div class="container">
             <h2 class="second-subtitle">OURTEAM</h2>
-            <ul>
+            <ul class="list-container">
                 <li class="list">
                     <h3 class="list-title">Strategy</h3>
                     <p class="list-text">Our goal is to identify the business problem to walk away with the perfect and
@@ -89,7 +89,7 @@
         <section class="section">
             <div class="container">
             <h2 class="subtitle">Our Team</h2>
-            <ul>
+            <ul class="list-container">
                 <li class="list">
                     <img src="./images/img1.jpg" alt="img" width="360" class="img">
                     <h3 class="list-title">Mark Guerrero</h3>
@@ -116,7 +116,7 @@
         <section class="section">
             <div class="container">
             <h2 class="subtitle">Our Portfolio</h2>
-            <ul>
+            <ul class="list-container">
                 <li class="list">
                     <img src="./images/img5.jpg" alt="img" width="360" class="img">
                     <h3 class="list-title">Banking App</h3>
