--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             </div>
         </section>
         <section class="section">
-             <div class="img-container">
+             <div class="container">
             <h2 class="subtitle">Our Team</h2>
             <ul class="list-container">
                 <li class="list">
