--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
                         opportunities and
                         minimize risk.</p>
                 </li class="list">
-                <li>
+                <li class="list">
                     <h3 class="list-title">Technologies</h3>
                     <p class="list-text">Design practice focused on digital experiences. We bring forth a deep passion
                         for
                         problem-solving.</p>
-                </li class="list">
+                </li>
             </ul>
             </div>
         </section>
