--- a/index.html
+++ b/index.html
@@ -59,24 +59,24 @@
             <div class="container">
             <h2 class="subtitle">OURTEAM</h2>
             <ul class="list-container">
-                <li class="list">
+                <li class="list-item">
                     <h3 class="list-title">Strategy</h3>
                     <p class="list-text">Our goal is to identify the business problem to walk away with the perfect and
                         creative solution.
                     </p>
                 </li>
-                <li class="list">
+                <li class="list-item">
                     <h3 class="list-title">Punctuality</h3>
                     <p class="list-text">Bring the key message to the brand's audience for the best price within the
                         shortest possible
                         time.</p>
                 </li>
-                <li class="list">
+                <li class="list-item">
                     <h3 class="list-title">Diligence</h3>
                     <p class="list-text">Research and confirm brands that present the strongest digital growth
                         opportunities and
                         minimize risk.</p>
-                </li class="list">
+                </li class="list-item">
                 <li class="list">
                     <h3 class="list-title">Technologies</h3>
                     <p class="list-text">Design practice focused on digital experiences. We bring forth a deep passion
@@ -90,22 +90,22 @@
              <div class="container">
             <h2 class="subtitle">Our Team</h2>
             <ul class="list-container">
-                <li class="list">
+                <li class="list-item">
                     <img src="./images/img1.jpg" alt="img" width="360" class="img">
                     <h3 class="list-title">Mark Guerrero</h3>
                     <p class="list-text">Product Designer</p>
                 </li>
-                <li class="list">
+                <li class="list-item">
                     <img src="./images/img2.jpg" alt="img" width="360" class="img">
                     <h3 class="list-title">Tom Ford</h3>
                     <p class="list-text">Frontend Developer</p>
                 </li>
-                <li class="list">
+                <li class="list-item">
                     <img src="./images/img3.jpg" alt="img" width="360" class="img">
                     <h3 class="list-title">Camila Garcia</h3>
                     <p class="list-text">Marketing</p>
                 </li>
-                <li class="list">
+                <li class="list-item">
                     <img src="./images/img4.jpg" alt="img" width="360" class="img">
                     <h3 class="list-title">Daniel Wilson</h3>
                     <p class="list-text">UI Designer</p>
@@ -117,32 +117,32 @@
             <div class="container">
             <h2 class="subtitle">Our Portfolio</h2>
             <ul class="list-container">
-                <li class="list">
+                <li class="list-item">
                     <img src="./images/img5.jpg" alt="img" width="360" class="img">
                     <h3 class="list-title">Banking App</h3>
                     <p class="list-text">App</p>
                 </li>
-                <li class="list">
+                <li class="list-item">
                     <img src="./images/img6.jpg" alt="img" width="360" class="img">
                     <h3 class="list-title">Cashless Payment</h3>
                     <p class="list-text">Marketing</p>
                 </li>
-                <li>
+                <li class="list-item">
                     <img src="./images/img7.jpg" alt="img" width="360" class="img">
                     <h3 class="list-title">Meditation App</h3>
                     <p class="list-text">App</p>
                 </li>
-                <li>
+                <li class="list-item">
                     <img src="./images/img8.jpg" alt="img" width="360" class="img">
                     <h3 class="list-title">Taxi Service</h3>
                     <p class="list-text">Marketing</p>
                 </li>
-                <li>
+                <li class="list-item">
                     <img src="./images/img9.jpg" alt="img" width="360" class="img">
                     <h3 class="list-title">Screen Illustrations</h3>
                     <p class="list-text">Design</p>
                 </li>
-                <li>
+                <li class="list-item">
                     <img src="./images/img10.jpg" alt="img" width="360" class="img">
                     <h3 class="list-title">Online Courses</h3>
                     <p class="list-text">Marketing</p>
