--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </section>
         <section class="section">
             <div class="container">
-            <h2 class="subtitle">OURTEAM</h2>
+            <h2 class="visually-hidden">OURTEAM</h2>
             <ul class="list-container">
                 <li class="list-item list">
                     <h3 class="list-title">Strategy</h3>
