--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Webstoudio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href=https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto:wght@400;500;700&display=swap"
         rel="stylesheet">
 
     <link rel="stylesheet"
@@ -17,7 +17,6 @@
 
 <body>
     <header class="page-header">
-        <div class="container">
         <nav class="page-navigator">
             <a class="logotype" href="./index.html">
                 Web<span class="logotype-span">Studio</span>
@@ -33,6 +32,7 @@
                     <a class="menu-link" href="">Contacts</a>
                 </li>
             </ul>
+          
         </nav>
         <address class="address">
             <ul class="menu-contact">
@@ -43,122 +43,109 @@
                     <a class="contact-information" href="tel:+110001111111">+11(000)111-11-11</a>
                 </li>
             </ul>
-            </div>
         </address>
     </header>
     <main>
         <!-- HERO SECTION -->
 
-        <section class="first-section">
-            <div class="container">
+        <section class="section">
             <h1 class="page-title">Effective Solutions for Your Business</h1>
             <button type="button" class="button">Order Service</button>
-            </div>
         </section>
         <section class="section">
-            <div class="container">
-            <h2 class="visually-hidden">OURTEAM</h2>
-            <ul class="list-container">
-                <li class="list-item list">
+            <h2 class="subtitle">OURTEAM</h2>
+            <ul class="section-list">
+                <li class="list-item">
                     <h3 class="list-title">Strategy</h3>
                     <p class="list-text">Our goal is to identify the business problem to walk away with the perfect and
                         creative solution.
                     </p>
                 </li>
-                <li class="list-item list">
+                <li class="list-item">
                     <h3 class="list-title">Punctuality</h3>
                     <p class="list-text">Bring the key message to the brand's audience for the best price within the
                         shortest possible
                         time.</p>
                 </li>
-                <li class="list-item list">
+                <li class="list-item">
                     <h3 class="list-title">Diligence</h3>
                     <p class="list-text">Research and confirm brands that present the strongest digital growth
                         opportunities and
                         minimize risk.</p>
                 </li>
-                <li class="list-item list">
+                <li class="list-item">
                     <h3 class="list-title">Technologies</h3>
-                    <p class="list-text">Design practice focused on digital experiences. We bring forth a deep passion
-                        for
-                        problem-solving.</p>
+                    <p class="list-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
             </ul>
-            </div>
         </section>
-        <section class="section">
-             <div class="container">
+        <section class="third-section">
             <h2 class="subtitle">Our Team</h2>
-            <ul class="list-container">
-                <li class="list-item list">
+            <ul class="section-list">
+                <li class="list-item">
                     <img src="./images/img1.jpg" alt="img" width="360" class="img">
                     <h3 class="list-title">Mark Guerrero</h3>
                     <p class="list-text">Product Designer</p>
                 </li>
-                <li class="list-item list">
+                <li class="list-item">
                     <img src="./images/img2.jpg" alt="img" width="360" class="img">
                     <h3 class="list-title">Tom Ford</h3>
                     <p class="list-text">Frontend Developer</p>
                 </li>
-                <li class="list-item list">
+                <li class="list-item">
                     <img src="./images/img3.jpg" alt="img" width="360" class="img">
                     <h3 class="list-title">Camila Garcia</h3>
                     <p class="list-text">Marketing</p>
                 </li>
-                <li class="list-item list">
+                <li class="list-item">
                     <img src="./images/img4.jpg" alt="img" width="360" class="img">
                     <h3 class="list-title">Daniel Wilson</h3>
                     <p class="list-text">UI Designer</p>
                 </li>
             </ul>
-            </div>
         </section>
         <section class="section">
-            <div class="container">
             <h2 class="subtitle">Our Portfolio</h2>
-            <ul class="list-container">
+            <ul class="section-list">
                 <li class="list-item">
                     <img src="./images/img5.jpg" alt="img" width="360" class="img">
                     <h3 class="list-title">Banking App</h3>
                     <p class="list-text">App</p>
                 </li>
-                <li class="list-item list">
+                <li class="list-item">
                     <img src="./images/img6.jpg" alt="img" width="360" class="img">
                     <h3 class="list-title">Cashless Payment</h3>
                     <p class="list-text">Marketing</p>
                 </li>
-                <li class="list-item list">
+                <li class="list-item">
                     <img src="./images/img7.jpg" alt="img" width="360" class="img">
                     <h3 class="list-title">Meditation App</h3>
                     <p class="list-text">App</p>
                 </li>
-                <li class="list-item list">
+                <li class="list-item">
                     <img src="./images/img8.jpg" alt="img" width="360" class="img">
                     <h3 class="list-title">Taxi Service</h3>
                     <p class="list-text">Marketing</p>
-                </li>
-                <li class="list-item list">
+                </li class="list-item">
+                <li class="list-item">
                     <img src="./images/img9.jpg" alt="img" width="360" class="img">
                     <h3 class="list-title">Screen Illustrations</h3>
                     <p class="list-text">Design</p>
                 </li>
-                <li class="list-item list">
+                <li class="list-item">
                     <img src="./images/img10.jpg" alt="img" width="360" class="img">
                     <h3 class="list-title">Online Courses</h3>
                     <p class="list-text">Marketing</p>
-                </li>
+                </li class="list-item">
             </ul>
-            </div>
         </section>
     </main>
     <footer class="page-footer">
-        <div class="container">
         <a class="logotype" href="./index.html">
             Web<span class="footer-logotype-span">Studio</span>
         </a>
         <p class="logotype-text" style="color: #F4F4FD">Increase the flow of customers and sales for your business with
             digital marketing & growth solutions.</p>
-        </div>
     </footer>
 
     <body>
