--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 </li>
             </ul>
         </section>
-        <section class="section">
+        <section class="fourth-section">
             <h2 class="subtitle">Our Portfolio</h2>
             <ul class="section-list"">
                 <li class="list">
