--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <body>
     <header class="page-header">
         <nav class="page-navigator">
+            <div class="container">
             <a class="logotype" href="./index.html">
                 Web<span class="logotype-span">Studio</span>
             </a>
@@ -43,6 +44,7 @@
                     <a class="contact-information" href="tel:+110001111111">+11(000)111-11-11</a>
                 </li>
             </ul>
+            </div>
         </address>
     </header>
     <main>
