--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </section>
         <section class="second-section">
            <div class="container">
-            <h2>Benefits</h2>
+            <h2 class="visually-hidden">Benefits</h2>
             <ul class="section-list">
                 <li class="list">
                     <h3 class="list-title">Strategy</h3>
