--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@ n<!DOCTYPE html>
         </div>
         </section>
         <section class="third-section">
+         <div class="container">
             <h2 class="subtitle">Our Team</h2>
             <ul class="section-list">
                 <li class="list">
@@ -109,6 +110,7 @@ n<!DOCTYPE html>
                     <p class="list-text">UI Designer</p>
                 </li>
             </ul>
+         </div>
         </section>
         <section class="fourth-section">
             <h2 class="subtitle">Our Portfolio</h2>
