--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     </div>
                 </li>
                 <li class="third-list">
-                     <div">
+                     <div>
                     <img src="./images/img2.jpg" alt="img" width="264" class="img">
                     <h3 class="list-title">Tom Ford</h3>
                     <p class="list-text">Frontend Developer</p>
