--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <section class="fourth-section">
              <div class="container">
             <h2 class="subtitle">Our Portfolio</h2>
-            <ul class="section-list">
+            <ul class="fourth-section-list">
                 <li class="list">
                     <img src="./images/img5.jpg" alt="img" width="360" class="img">
                     <div class="div">
