--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     </main>
   <footer class="page-footer">
     <div class="container">
-        <a class="logotype" href="./index.html">
+        <a class="second-logotype" href="./index.html">
             Web<span class="footer-logotype-span">Studio</span>
         </a>
         <p class="logotype-text" style="color: #F4F4FD">Increase the flow of customers and sales for your business with
