--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <h2 class="visually-hidden">Benefits</h2>
             <ul class="section-list">
                 <li class="second-list">
-                    <h3 class="list-title">Strategy</h3>
+                    <h3 class="list-style">Strategy</h3>
                     <p class="list-text">Our goal is to identify the business problem to walk away with the perfect and
                         creative solution.
                     </p>
@@ -91,29 +91,29 @@
                 <li class="third-list">
                     <img src="./images/img1.jpg" alt="img" width="264" class="img">
                      <div class="list-div">
-                    <h3 class="list-title">Mark Guerrero</h3>
-                    <p class="list-text">Product Designer</p>
+                    <h3 class="team-list-title">Mark Guerrero</h3>
+                    <p class="team-list-text">Product Designer</p>
                     </div>
                 </li>
                 <li class="third-list">
                     <img src="./images/img2.jpg" alt="img" width="264" class="img">
                      <div class="list-div">
-                    <h3 class="list-title">Tom Ford</h3>
-                    <p class="list-text">Frontend Developer</p>
+                    <h3 class="team-list-title">Tom Ford</h3>
+                    <p class="team-list-text">Frontend Developer</p>
                     </div>
                 </li>
                 <li class="third-list">
                     <img src="./images/img3.jpg" alt="img" width="264" class="img">
                       <div class="list-div">
-                    <h3 class="list-title">Camila Garcia</h3>
-                    <p class="list-text">Marketing</p>
+                    <h3 class="team-list-title">Camila Garcia</h3>
+                    <p class="team-list-text">Marketing</p>
                     </div>
                 </li>
                 <li class="third-list">
                     <img src="./images/img4.jpg" alt="img" width="264" class="img">
                       <div class="list-div">
-                    <h3 class="list-title">Daniel Wilson</h3>
-                    <p class="list-text">UI Designer</p>
+                    <h3 class="team-list-title">Daniel Wilson</h3>
+                    <p class="team-list-text">UI Designer</p>
                      </div>
                 </li>
             </ul>
