--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <h2 class="visually-hidden">Benefits</h2>
             <ul class="section-list">
                 <li class="second-list">
-                    <h3 class="list-style">Strategy</h3>
+                    <h3 class="list-title">Strategy</h3>
                     <p class="list-text">Our goal is to identify the business problem to walk away with the perfect and
                         creative solution.
                     </p>
