--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <header class="page-header">
-        <div class="container display">
+        <div class="">
         <nav class="page-navigator">
             <a class="logotype" href="./index.html">
                 Web<span class="logotype-span">Studio</span>
@@ -56,7 +56,7 @@
             </div>
         </section>
         <section class="second-section">
-           <div class="container">
+           <div class="">
             <h2 class="visually-hidden">Benefits</h2>
             <ul class="section-list">
                 <li class="second-list">
@@ -85,7 +85,7 @@
         </div>
         </section>
         <section class="third-section">
-         <div class="container display">
+         <div class="">
             <h2 class="subtitle">Our Team</h2>
             <ul class="section-list">
                 <li class="third-list">
@@ -120,7 +120,7 @@
          </div>
         </section>
         <section class="fourth-section">
-             <div class="container display">
+             <div class="">
             <h2 class="subtitle">Our Portfolio</h2>
             <ul class="fourth-section-list">
                 <li class="fourth-list">
