--- a/index.html
+++ b/index.html
@@ -90,28 +90,28 @@
             <ul class="section-list">
                 <li class="third-list">
                     <img src="./images/img1.jpg" alt="img" width="264" class="img">
-                     <div class="team-list-div">
+                     <div class="list-div">
                     <h3 class="team-list-title">Mark Guerrero</h3>
                     <p class="team-list-text">Product Designer</p>
                     </div>
                 </li>
                 <li class="third-list">
                     <img src="./images/img2.jpg" alt="img" width="264" class="img">
-                     <div class="team-list-div">
+                     <div class="list-div">
                     <h3 class="team-list-title">Tom Ford</h3>
                     <p class="team-list-text">Frontend Developer</p>
                     </div>
                 </li>
                 <li class="third-list">
                     <img src="./images/img3.jpg" alt="img" width="264" class="img">
-                      <div class="team-list-div">
+                      <div class="list-div">
                     <h3 class="team-list-title">Camila Garcia</h3>
                     <p class="team-list-text">Marketing</p>
                     </div>
                 </li>
                 <li class="third-list">
                     <img src="./images/img4.jpg" alt="img" width="264" class="img">
-                      <div class="team-list-div">
+                      <div class="list-div">
                     <h3 class="team-list-title">Daniel Wilson</h3>
                     <p class="team-list-text">UI Designer</p>
                      </div>
