--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
                 <li class="nav-list  ::after">
                     <a class="menu-link" href="./index.html">Studio</a>
                 </li>
-                <li class="nav-list" ::after>
+                <li class="nav-list ::after">
                     <a class="menu-link" href="">Portfolio</a>
                 </li>
-                <li class="nav-list" ::after> 
+                <li class="nav-list ::after"> 
                     <a class="menu-link" href="">Contacts</a>
                 </li>
             </ul>
