--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <ul class="section-list">
                 <li class="second-list">
                     <div class="icons-div">
-                        <svg width="64" height"64">
+                        <svg width="64" height="64">
                         <use href></use></svg>
                     </div>
                     <h3 class="list-title">Strategy</h3>
@@ -71,7 +71,7 @@
                 </li>
                 <li class="second-list">
                     <div class="icons-div">
-                        <svg width="64" height"64">
+                        <svg width="64" height="64">
                         <use href></use></svg>
                     </div>
                     <h3 class="list-title">Punctuality</h3>
@@ -81,7 +81,7 @@
                 </li>
                 <li class="second-list">
                     <div class="icons-div">
-                        <svg width="64" height"64">
+                        <svg width="64" height="64">
                         <use href></use></svg>
                     </div>
                     <h3 class="list-title">Diligence</h3>
@@ -91,7 +91,7 @@
             </li>
                 <li class="second-list">
                     <div class="icons-div">
-                        <svg width="64" height"64">
+                        <svg width="64" height="64">
                         <use href></use></svg>
                     </div>
                     <h3 class="list-title">Technologies</h3>
