--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <li class="second-list">
                     <div class="icons-div">
                         <svg width="64" height="64">
-                        <use href="./images/antenna 1.svg"></use></svg>
+                        <use href="./images/antenna 1.svg#icon1"></use></svg>
                     </div>
                     <h3 class="list-title">Strategy</h3>
                     <p class="list-text">Our goal is to identify the business problem to walk away with the perfect and
@@ -72,7 +72,7 @@
                 <li class="second-list">
                     <div class="icons-div">
                         <svg width="64" height="64">
-                        <use href="./images/astronaut 1.svg></use></svg>
+                        <use href="./images/astronaut 1.svg#icon2></use></svg>
                     </div>
                     <h3 class="list-title">Punctuality</h3>
                     <p class="list-text">Bring the key message to the brand's audience for the best price within the
@@ -82,7 +82,7 @@
                 <li class="second-list">
                     <div class="icons-div">
                         <svg width="64" height="64">
-                        <use href="./images/diagram 1.svg"></use></svg>
+                        <use href="./images/diagram 1.svg"#icon3></use></svg>
                     </div>
                     <h3 class="list-title">Diligence</h3>
                     <p class="list-text">Research and confirm brands that present the strongest digital growth
@@ -92,7 +92,7 @@
                 <li class="second-list">
                     <div class="icons-div">
                         <svg width="64" height="64">
-                        <use href="./images/clock 1.svg"></use></svg>
+                        <use href="./images/clock 1.svg"#icon4></use></svg>
                     </div>
                     <h3 class="list-title">Technologies</h3>
                     <p class="list-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
