--- a/index.html
+++ b/index.html
@@ -109,6 +109,9 @@
                      <div class="list-div">
                     <h3 class="team-list-title">Mark Guerrero</h3>
                     <p class="team-list-text">Product Designer</p>
+                        <ul class="cosial-list">
+                            <li></li>
+                        </ul>
                     </div>
                 </li>
                 <li class="third-list">
