--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <h3 class="team-list-title">Mark Guerrero</h3>
                     <p class="team-list-text">Product Designer</p>
                         <ul class="cosial-list">
-                            <li></li>
+                            <li class="social-li"></li>
                         </ul>
                     </div>
                 </li>
@@ -119,6 +119,9 @@
                      <div class="list-div">
                     <h3 class="team-list-title">Tom Ford</h3>
                     <p class="team-list-text">Frontend Developer</p>
+                         <ul class="cosial-list">
+                            <li class="social-li"></li>
+                        </ul>
                     </div>
                 </li>
                 <li class="third-list">
@@ -126,6 +129,9 @@
                       <div class="list-div">
                     <h3 class="team-list-title">Camila Garcia</h3>
                     <p class="team-list-text">Marketing</p>
+                          <ul class="cosial-list">
+                            <li class="social-li"></li>
+                        </ul>
                     </div>
                 </li>
                 <li class="third-list">
@@ -133,6 +139,9 @@
                       <div class="list-div">
                     <h3 class="team-list-title">Daniel Wilson</h3>
                     <p class="team-list-text">UI Designer</p>
+                          <ul class="cosial-list">
+                            <li class="social-li"></li>
+                        </ul>
                      </div>
                 </li>
             </ul>
