--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                      <div class="list-div">
                     <h3 class="team-list-title">Tom Ford</h3>
                     <p class="team-list-text">Frontend Developer</p>
-                         <ul class="cosial-list">
+                         <ul class="social-list">
                             <li class="social-li"></li>
                         </ul>
                     </div>
@@ -129,7 +129,7 @@
                       <div class="list-div">
                     <h3 class="team-list-title">Camila Garcia</h3>
                     <p class="team-list-text">Marketing</p>
-                          <ul class="cosial-list">
+                          <ul class="social-list">
                             <li class="social-li"></li>
                         </ul>
                     </div>
