--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                       <div class="list-div">
                     <h3 class="team-list-title">Daniel Wilson</h3>
                     <p class="team-list-text">UI Designer</p>
-                          <ul class="sosial-list">
+                          <ul class="social-list">
                             <li class="social-li"></li>
                         </ul>
                      </div>
