--- a/index.html
+++ b/index.html
@@ -110,7 +110,11 @@
                     <h3 class="team-list-title">Mark Guerrero</h3>
                     <p class="team-list-text">Product Designer</p>
                         <ul class="social-list">
-                            <li class="social-li"></li>
+                            <li class="social-li">
+                                <a class="social-links">
+                                     <svg width="16" height="16"></svg>
+                                </a>
+                            </li>
                         </ul>
                     </div>
                 </li>
@@ -120,7 +124,11 @@
                     <h3 class="team-list-title">Tom Ford</h3>
                     <p class="team-list-text">Frontend Developer</p>
                          <ul class="social-list">
-                            <li class="social-li"></li>
+                            <li class="social-li">
+                                 <a class="social-links">
+                                      <svg width="16" height="16"></svg>
+                                 </a>
+                            </li>
                         </ul>
                     </div>
                 </li>
@@ -130,7 +138,11 @@
                     <h3 class="team-list-title">Camila Garcia</h3>
                     <p class="team-list-text">Marketing</p>
                           <ul class="social-list">
-                            <li class="social-li"></li>
+                            <li class="social-li">
+                                <a class="social-links">
+                                     <svg width="16" height="16"></svg>
+                                </a>
+                            </li>
                         </ul>
                     </div>
                 </li>
@@ -140,7 +152,11 @@
                     <h3 class="team-list-title">Daniel Wilson</h3>
                     <p class="team-list-text">UI Designer</p>
                           <ul class="social-list">
-                            <li class="social-li"></li>
+                            <li class="social-li">
+                                <a class="social-links">
+                                    <svg  width="16" height="16"></svg>
+                                </a>
+                            </li>
                         </ul>
                      </div>
                 </li>
